eina: fix overlapped doxygen string output
Summary:
Add top padding to prevent overlapping between "Value:" and below
strings when long macro is used.

Reviewers: raster, cedric

Subscribers: cedric

Differential Revision: https://phab.enlightenment.org/D1582

--- a/doc/e.css
+++ b/doc/e.css
@@ -150,6 +150,7 @@ dl.el {
   font-family: monospace, mono, fixed;
   font-size: 9pt;
   white-space: pre;
+  padding-top: 10px;
 }
 
 .line {
